src/test/ui/enum/enum-variant-type-2.stderr
error[E0573]: expected type, found variant `Foo::Bar`
  --> $DIR/enum-variant-type-2.rs:17:11
   |
LL | fn foo(x: Foo::Bar) {} //~ ERROR expected type, found variant `Foo::Bar`
   |           ^^^^^^^^
   |           |
   |           not a type
   |           help: you can try using the variant's enum: `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
